--- a/index.html
+++ b/index.html
@@ -3,44 +3,34 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tim Bruecker</title>
+  <title>Cody Clattenburg</title>
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="css/extraStyle.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link href="favicon.png?" rel="icon" sizes="64x64" type="favicon.png">
 </head>
 <body>
   <div class="container">
     <div class="row vertical-center">
       <div class="col-xs-12 text-center">
-        <h1>Tim Bruecker</h1>
+        <h1>Cody Clattenburg</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
       </div>
-      <!--Add more icons in each xs-1 column here-->
       <div class="col-md-1">
+        <a target="_blank" href="https://github.com/Captainburg"><img src="images/github-sign.png" alt="Github Icon" class="center-block"/></a>
+      </div>
+      <div class="col-md-2">
+        <a target="_blank" href="https://twitter.com/Captainburg"><img src="images/twitter-sign.png" alt="Twitter Icon" class="center-block"/></a>
       </div>
       <div class="col-md-1">
-        <a href="https://github.com/CanOSpam"><img src="images/github-sign.png" alt="Github Icon" class="center-block"/></a>
-      </div>
-      <div class="form-group visible-xs-block visible-sm-block">
-        &nbsp;
-      </div>
-      <div class="col-md-1">
-        <a href="https://ca.linkedin.com/in/timbruecker"><img src="images/linkedin-logo.png" alt="LinkedIn Icon" class="center-block"/></a>
-      </div>
-      <div class="col-md-1">
+        <a target="_blank" href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1'><img src="images/email-sign.png" alt="Twitter Icon" class="center-block"/></a>
       </div>
       <div class="col-md-4">
       </div>
     </div>
   </div>
-  <a href="https://github.com/CanOSpam/EasyPersonalWebsite">
-    <img style="position: absolute; top: 0; right: 0; border: 0;"
-    src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
-    alt="Fork me on GitHub"
-    data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
-  </a>
 </body>
 </html>
