--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-s-4">
       </div>
-      <div class="col-md-1">
+      <div class="col-xs-1">
         <a target="_blank" href="https://github.com/Captainburg"><img src="images/github-sign.png" alt="Github Icon" class="center-block"/></a>
       </div>
-      <div class="col-md-2">
+      <div class="col-xs-2">
         <a target="_blank" href="https://twitter.com/Captainburg"><img src="images/twitter-sign.png" alt="Twitter Icon" class="center-block"/></a>
       </div>
-      <div class="col-md-1">
+      <div class="col-xs-1">
         <a target="_blank" href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1'><img src="images/email-sign.png" alt="Twitter Icon" class="center-block"/></a>
       </div>
-      <div class="col-md-4">
+      <div class="col-s-4">
       </div>
     </div>
   </div>
