--- a/index.html
+++ b/index.html
@@ -11,25 +11,41 @@
 </head>
 <body>
   <div class="container">
+
+    <!-- HEADER: MY NAME -->
     <div class="row vertical-center">
       <div class="col-xs-12 text-center">
         <h1>Cody Clattenburg</h1>
       </div>
     </div>
+
+    <!-- MAIN: LINKS TO SITES & SERVICES -->
     <div class="row">
-      <div class="col-xs-4">
+      <div class="col-sm-3 text-center">
+        <a target="_blank" href="https://github.com/Captainburg">
+          <img src="images/github-sign.png" alt="Github Icon"/>
+        </a>
       </div>
-      <div class="col-xs-1">
-        <a target="_blank" href="https://github.com/Captainburg"><img src="images/github-sign.png" alt="Github Icon" class="center-block"/></a>
+      <div class="col-sm-3 text-center">
+        <a target="_blank" href="https://twitter.com/Captainburg">
+          <img src="images/twitter-sign.png" alt="Twitter Icon"/>
+        </a>
       </div>
-      <div class="col-xs-2">
-        <a target="_blank" href="https://twitter.com/Captainburg"><img src="images/twitter-sign.png" alt="Twitter Icon" class="center-block"/></a>
+      <div class="col-sm-3 text-center">
+        <a target="_blank" href="https://linkedin.com/in/cody-clattenburg">
+          <img src="images/linkedin-sign.png" alt="LinkedIn Icon"/>
+        </a>
       </div>
-      <div class="col-xs-1">
-        <a target="_blank" href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1'><img src="images/email-sign.png" alt="Twitter Icon" class="center-block"/></a>
+      <div class="col-sm-3 text-center">
+        <a target="_blank" href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1'>
+          <img src="images/email-sign.png" alt="Twitter Icon"/>
+        </a>
       </div>
-      <div class="col-xs-4">
-      </div>
+    </div>
+
+    <!-- FOOTER: UNDER CONSTRUCTION -->
+    <div class="navbar navbar-default navbar-fixed-bottom">
+      <p class="navbar-text">Site Under Heavy Construction</p>
     </div>
   </div>
 </body>
