--- a/index.html
+++ b/index.html
@@ -23,24 +23,36 @@
     <div class="row">
       <div class="col-sm-3 text-center">
         <a target="_blank" href="https://github.com/Captainburg">
-          <img src="images/github-sign.png" alt="Github Icon"/>
+          <button type="button" class="btn btn-default btn-lg img-responsive">
+            <img src="images/github-sign.png" alt="Github Icon" class="img-responsive"/>
+          </button>
         </a>
       </div>
       <div class="col-sm-3 text-center">
         <a target="_blank" href="https://twitter.com/Captainburg">
-          <img src="images/twitter-sign.png" alt="Twitter Icon"/>
+          <button type="button" class="btn btn-default btn-lg img-responsive">
+            <img src="images/twitter-sign.png" alt="Twitter Icon" class="img-responsive"/>
+          </button>
         </a>
       </div>
       <div class="col-sm-3 text-center">
         <a target="_blank" href="https://linkedin.com/in/cody-clattenburg">
-          <img src="images/linkedin-sign.png" alt="LinkedIn Icon"/>
+          <button type="button" class="btn btn-default btn-lg img-responsive">
+            <img src="images/linkedin-sign.png" alt="LinkedIn Icon" class="img-responsive"/>
+          </button>
         </a>
       </div>
       <div class="col-sm-3 text-center">
         <a target="_blank" href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1'>
-          <img src="images/email-sign.png" alt="Twitter Icon"/>
+          <button type="button" class="btn btn-default btn-lg img-responsive">
+            <img src="images/email-sign.png" alt="Twitter Icon" class="img-responsive"/>
+          </button>
         </a>
       </div>
+    </div>
+
+    <!-- MOBILE SPACER PLACEHOLDER -->
+    <div class="row vertical-center">
     </div>
 
     <!-- FOOTER: UNDER CONSTRUCTION -->
