MAJOR rework patch 1

--- a/index.html
+++ b/index.html
@@ -3,62 +3,88 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cody Clattenburg</title>
+  <title>Cody Clattenburg's Portfolio Website</title>
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link href="css/extraStyle.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-  <link href="favicon.png?" rel="icon" sizes="64x64" type="favicon.png">
+  <link href="css/extraStyle.css" rel="stylesheet" media="screen">
+  <link href="images/me.png?" rel="icon" sizes="64x64" type="favicon.png">
 </head>
 <body>
-  <div class="container">
-
-    <!-- HEADER: MY NAME -->
-    <div class="row vertical-center">
-      <div class="col-xs-12 text-center">
-        <h1>Cody Clattenburg</h1>
-      </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">ABOUT</a></li>
+        <li><a href="portfolio.html">PORTFOLIO</a></li>
+        <li><a href="https://linkedin.com/in/cody-clattenburg" style="padding: 5px;"><img src="images/linkedin-sign.png" height="40" class="img-circle"></img></a></li>
+        <li><a href="https://twitter.com/Captainburg" style="padding: 5px;"><img src="images/twitter-sign.png" height="40" class="img-circle"></img></a></li>
+        <li><a href="https://github.com/Captainburg" style="padding: 5px;"><img src="images/github-sign.png" height="40" class="img-circle"></img></a></li>
+        <li><a href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1' style="padding: 5px;"><img src="images/email-sign.png" height="40" class="img-circle"></img></a></li>
+      </ul>
     </div>
+  </nav>
 
-    <!-- MAIN: LINKS TO SITES & SERVICES -->
-    <div class="row">
-      <div class="col-sm-3 text-center">
-        <a target="_blank" href="https://github.com/Captainburg">
-          <button type="button" class="btn btn-default btn-lg img-responsive">
-            <img src="images/github-sign.png" alt="Github Icon" class="img-responsive"/>
-          </button>
-        </a>
-      </div>
-      <div class="col-sm-3 text-center">
-        <a target="_blank" href="https://twitter.com/Captainburg">
-          <button type="button" class="btn btn-default btn-lg img-responsive">
-            <img src="images/twitter-sign.png" alt="Twitter Icon" class="img-responsive"/>
-          </button>
-        </a>
-      </div>
-      <div class="col-sm-3 text-center">
-        <a target="_blank" href="https://linkedin.com/in/cody-clattenburg">
-          <button type="button" class="btn btn-default btn-lg img-responsive">
-            <img src="images/linkedin-sign.png" alt="LinkedIn Icon" class="img-responsive"/>
-          </button>
-        </a>
-      </div>
-      <div class="col-sm-3 text-center">
-        <a target="_blank" href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1'>
-          <button type="button" class="btn btn-default btn-lg img-responsive">
-            <img src="images/email-sign.png" alt="Twitter Icon" class="img-responsive"/>
-          </button>
-        </a>
-      </div>
+<div class="container">
+  <div class="row">
+    <!-- Self Photo -->
+    <div class="col-sm-4 text-center">
+      <h2>Cody Clattenburg</h2>
+      <img src="images/me.png" width="235" class="img-circle"></img>
     </div>
-
-    <!-- MOBILE SPACER PLACEHOLDER -->
-    <div class="row vertical-center">
-    </div>
-
-    <!-- FOOTER: UNDER CONSTRUCTION -->
-    <div class="navbar navbar-default navbar-fixed-bottom">
-      <p class="navbar-text">Site Under Heavy Construction</p>
+    <!-- ABOUT -->
+    <div class="col-sm-8 text-left">
+      <h2>
+        Who am I?
+      </h2>
+      <p>
+        My name is Cody Clattenburg, I am a BCIT Computer Systems Technology student looking
+        for a summer internship in the video games industry.  As a gamer myself, I am very invested in my
+        work and care a lot about creating a high quality product that others can enjoy.
+        Nothing is better than months of blood, sweat, and tears finally paying off
+        as you watch someone play your game for the first time.
+      </p>
+      <h2>
+        More about BCIT
+      </h2>
+      <p>
+        Over the course of my first semester I earned a GPA of 3.81.  I plan to specialize in the digital
+        processing option offered in September of 2017, and expect to graduate in May of 2018. My key to success in
+        the program so far has been greatly aided by utilizing my fellow students within my set. Without working as a
+        team, it would have made the extremely fast moving environment of CST much more difficult. My peers and I have
+        worked independently, but done so together, executing on our own tasks and but also knowing when to ask for help.
+        Together, we are all part of a 25 person 'set'. There are 5 sets of 25 in total, and I am the set representative
+        ours. Part of that includes going to focus groups and to give feedback on the program to the dean, and student
+        association. We act as a team to resolve any issues and go through leadership training within the program.
+      </p>
+      <h2>
+        Personal Projects and Skills
+      </h2>
+      <h4>Passion Projects and Game Jams</h4>
+      <ul>
+        <li>I Developed a game from scratch in under 12 hours with my team of 2, giving us experience in a fast moving environment, and completing tasks under pressure.</li>
+        <li>I created an RPG engine by myself over a 7-month period.</li>
+        <li>I designed a game that included features I had no idea how to create at the time, allowing me to push my boundaries and overcome challenges.</li>
+        <li>I worked on a 3D engine that used logarithmic functions to scale and transform sprites on the screen in a “DOOM” or “Old-School Shooter” type of art style.</li>
+        <li>I’ve created an AutoHotkey script for personal usage that automates and greatly speeds up many programming related tasks in order to increase work efficiency and flow.</li>
+        <li>Very comfortable with object-oriented programming, and agile development concepts.</li>
+      </ul>
+      <h4>Awards and Certificates</h4>
+      <ul>
+        <li>Android Advanced Technical Support Certificate			             	      August 2016</li>
+        <li>Information Technology Award					                                    June 2016</li>
+        <li>GWG Game Jam 2016 Winner					                                         May 2016</li>
+      </ul>
+      <h4>Languages and Programs Learned</h4>
+      <ul>
+        <li>Game and program creation with GML, Java, C, and C++.</li>
+        <li>Scripting with Python, and AHK.</li>
+        <li>Source control with GitHub, and command line Git.</li>
+        <li>Database management with SQL.</li>
+        <li>Web development languages such as HTML5, XHTML, XML, CSS, Bootstrap, JQuery, JavaScript, and PHP.</li>
+      </ul>
     </div>
   </div>
+
+</div>
 </body>
 </html>
