Updated to use SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cody Clattenburg's Portfolio Website</title>
+  <title>Cody Clattenburg - Video Games, Passion, and Personality</title>
+  <meta name="description=" content="Cody Clattenburg's is a BCIT student
+  looking to get a job in the video game industry. He is currently looking
+  for a co-op position over the four month semester to further his skills,
+  and plans to go into a digital processing option at BCIT. His 5 year goal
+  is to become a rendering engineer.">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="css/extraStyle.css" rel="stylesheet" media="screen">
@@ -14,12 +19,20 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">ABOUT</a></li>
+        <li class="active"><a href="/">ABOUT</a></li>
         <li><a href="portfolio.html">PORTFOLIO</a></li>
-        <li><a href="https://linkedin.com/in/cody-clattenburg" style="padding: 5px;"><img src="images/linkedin-sign.png" height="40" class="img-circle"></img></a></li>
-        <li><a href="https://twitter.com/Captainburg" style="padding: 5px;"><img src="images/twitter-sign.png" height="40" class="img-circle"></img></a></li>
-        <li><a href="https://github.com/Captainburg" style="padding: 5px;"><img src="images/github-sign.png" height="40" class="img-circle"></img></a></li>
-        <li><a href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1' style="padding: 5px;"><img src="images/email-sign.png" height="40" class="img-circle"></img></a></li>
+        <li><a href="https://linkedin.com/in/cody-clattenburg" style="padding: 5px;">
+          <img alt="linkin icon" src="images/linkedin-sign.png" height="40" class="img-circle"></img>
+        </a></li>
+        <li><a href="https://twitter.com/Captainburg" style="padding: 5px;">
+          <img alt="twitter icon" src="images/twitter-sign.png" height="40" class="img-circle"></img>
+        </a></li>
+        <li><a href="https://github.com/Captainburg" style="padding: 5px;">
+          <img alt="github icon" src="images/github-sign.png" height="40" class="img-circle"></img>
+        </a></li>
+        <li><a href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1' style="padding: 5px;">
+          <img alt="email icon" src="images/email-sign.png" height="40" class="img-circle"></img>
+        </a></li>
       </ul>
     </div>
   </nav>
@@ -29,7 +42,7 @@
     <!-- Self Photo -->
     <div class="col-sm-4 text-center">
       <h2>Cody Clattenburg</h2>
-      <img src="images/me.png" width="235" class="img-circle"></img>
+      <img src="images/me.png" alt="Cody Clattenburg" width="235" class="img-circle"></img>
     </div>
     <!-- ABOUT -->
     <div class="col-sm-8 text-left">
@@ -84,7 +97,6 @@
       </ul>
     </div>
   </div>
-
 </div>
 </body>
 </html>
