Updated to use SEO2

--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cody Clattenburg - Video Games, Passion, and Personality</title>
-  <meta name="description=" content="Cody Clattenburg's is a BCIT student
-  looking to get a job in the video game industry. He is currently looking
-  for a co-op position over the four month semester to further his skills,
-  and plans to go into a digital processing option at BCIT. His 5 year goal
-  is to become a rendering engineer.">
+  <meta name="description=" content="Cody Clattenburg's is a BCIT student looking to get a job in the video game industry. He is currently looking for a co-op position over the four month semester to further his skills, and plans to go into a digital processing option at BCIT. His 5 year goal is to become a rendering engineer.">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="css/extraStyle.css" rel="stylesheet" media="screen">
