--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cody Clattenburg - Portfolio Page</title>
-  <meta name="description=" content="Cody Clattenburg's Portfolio demonstrating previous
-  accomplishments, game jam creations, and personal projects.">
+  <meta name="description=" content="Cody Clattenburg's Portfolio demonstrating previous accomplishments, game jam creations, and personal projects.">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="css/extraStyle.css" rel="stylesheet" media="screen">
