--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cody Clattenburg - Video Games, Passion, and Personality</title>
-  <meta name="description=" content="Cody Clattenburg's is a BCIT student looking to get a job in the video game industry. He is currently looking for a co-op position over the four month semester to further his skills, and plans to go into a digital processing option at BCIT. His 5 year goal is to become a rendering engineer.">
-  <meta name="Description" content="Cody Clattenburg's is a BCIT student looking to get a job in the video game industry. He is currently looking for a co-op position over the four month semester to further his skills, and plans to go into a digital processing option at BCIT. His 5 year goal is to become a rendering engineer.">
+  <meta name="description=" content="Cody Clattenburg is a BCIT student looking to get a job in the video game industry. He is currently looking for a co-op position over the four month semester to further his skills, and plans to go into a digital processing option at BCIT. His 5 year goal is to become a rendering engineer.">
+  <meta name="Description" content="Cody Clattenburg is a BCIT student looking to get a job in the video game industry. He is currently looking for a co-op position over the four month semester to further his skills, and plans to go into a digital processing option at BCIT. His 5 year goal is to become a rendering engineer.">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="css/extraStyle.css" rel="stylesheet" media="screen">
@@ -47,36 +47,24 @@
         Who am I?
       </h2>
       <p>
-        My name is Cody Clattenburg, I am a BCIT Computer Systems Technology student looking
-        for a summer internship in the video games industry.  As a gamer myself, I am very invested in my
-        work and care a lot about creating a high quality product that others can enjoy.
-        Nothing is better than months of blood, sweat, and tears finally paying off
-        as you watch someone play your game for the first time.
-      </p>
-      <h2>
-        More about BCIT
-      </h2>
-      <p>
-        Over the course of my first semester I earned a GPA of 3.81.  I plan to specialize in the digital
-        processing option offered in September of 2017, and expect to graduate in May of 2018. My key to success in
-        the program so far has been greatly aided by utilizing my fellow students within my set. Without working as a
-        team, it would have made the extremely fast moving environment of CST much more difficult. My peers and I have
-        worked independently, but done so together, executing on our own tasks and but also knowing when to ask for help.
-        Together, we are all part of a 25 person 'set'. There are 5 sets of 25 in total, and I am the set representative
-        ours. Part of that includes going to focus groups and to give feedback on the program to the dean, and student
-        association. We act as a team to resolve any issues and go through leadership training within the program.
+        My name is Cody Clattenburg, I am a BCIT Computer Systems Technology graduate.
+        As a gamer myself, I am very invested in my work and care a lot about
+        creating a high quality product that others can enjoy. Nothing is better
+        than months of blood, sweat, and tears finally paying off as you watch
+        someone play your game for the first time.
       </p>
       <h2>
         Personal Projects and Skills
       </h2>
-      <h4>Passion Projects and Game Jams</h4>
+      <h4>Personal Projects</h4>
       <ul>
-        <li>I Developed a game from scratch in under 12 hours with my team of 2, giving us experience in a fast moving environment, and completing tasks under pressure.</li>
-        <li>I created an RPG engine by myself over a 7-month period.</li>
-        <li>I designed a game that included features I had no idea how to create at the time, allowing me to push my boundaries and overcome challenges.</li>
-        <li>I worked on a 3D engine that used logarithmic functions to scale and transform sprites on the screen in a “DOOM” or “Old-School Shooter” type of art style.</li>
-        <li>I’ve created an AutoHotkey script for personal usage that automates and greatly speeds up many programming related tasks in order to increase work efficiency and flow.</li>
-        <li>Very comfortable with object-oriented programming, and agile development concepts.</li>
+        <li><a href="https://opendatadev.net/search-type">(JavaScript) An API that allows developers to use Public City Data for their applications.</a></li>
+        <li>(Android) An App that morphs one image into another, similar to a snapchat face filter.</li>
+        <li>(C#) An Audio Editor similar to Audacity that features DFT, Filtering, and more.</li>
+        <li><a href="https://github.com/Captainburg/Game-Engine">(C++) A game engine using DirectX9 and Win32 for development that renders a 3D world.</a></li>
+        <li><a href="portfolio.html">(GML) A top-down shooter in a 12-hour game jam with a small team.</a></li>
+        <li>(C#) A Neural Net that can read human writing without using any libraries, in only 2 days.</li>
+        <li>(Unity) A Medical Application for tracking a woman’s progress in labour.</li>
       </ul>
       <h4>Awards and Certificates</h4>
       <ul>
@@ -87,10 +75,11 @@
       <h4>Languages and Programs Learned</h4>
       <ul>
         <li>Game and program creation with GML, Java, C, and C++.</li>
-        <li>Scripting with Python, and AHK.</li>
-        <li>Source control with GitHub, and command line Git.</li>
-        <li>Database management with SQL.</li>
-        <li>Web development languages such as HTML5, XHTML, XML, CSS, Bootstrap, JQuery, JavaScript, and PHP.</li>
+        <li>1-2 Years of experience with C++, C#, C.</li>
+        <li>2 Years of experience with Java.</li>
+        <li>1-2 Years of experience with Git.</li>
+        <li>Experience with DirectX9, and DirectX11.</li>
+        <li>Experience with SQL, and web development.</li>
       </ul>
     </div>
   </div>
