--- a/portfolio.html
+++ b/portfolio.html
@@ -43,55 +43,25 @@
     </div>
     <!-- PORTFOLIO -->
     <div class="col-sm-8 text-left">
-      <h1>RPG Engine "Chronotale"</h1>
+      <h3>RPG Engine</h3>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/zXpAt4SHko0?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=zXpAt4SHko0&showinfo=0&modestbranding=1&autohide=1"></iframe>
       </div>
-      <h4>Game Features:</h4>
-      <ul>
-        <li>Encrypted save files to prevent cheating.</li>
-        <li>Easy to create NPC's, and enemies using existing or custom AI.</li>
-        <li>Day and Night cycle support and effects with shaders.</li>
-        <li>Both Gamepad and Keyboard Support.</li>
-        <li>Customizable Options Menu.</li>
-        <li>Boss creation script.</li>
-      </ul>
 
-      <h1>Tactical Strike Worldwide Offensive (GWG Game Jam Winner)</h1>
+      <h3>Tactical Strike Worldwide Offensive (GWG Game Jam Winner)</h3>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/ZNvA9dovttA?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=ZNvA9dovttA&showinfo=0&modestbranding=1&autohide=1"></iframe>
       </div>
-      <h4>Game Features:</h4>
-      <ul>
-        <li>This Game Jam Winner was made in less than 12 hours start to finish.</li>
-        <li>Smooth camera transition from aiming.</li>
-        <li>Fast paced fun rounds for up to four of your friends.</li>
-        <li>Plays on Gamepad.</li>
-        <li>Drop in/out system, players not being controller are taken control of by AI.</li>
-      </ul>
 
-      <h1>Space Exploration Game or "SEG"</h1>
+      <h3>Space Exploration Game</h3>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/GnPVzAq_WHI?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=GnPVzAq_WHI&showinfo=0&autohide=1"></iframe>
       </div>
-      <h4>Game Features:</h4>
-      <ul>
-        <li>Both Gamepad and Keyboard Support.</li>
-        <li>Ongoing universe with more enemies and shops to explore and see.</li>
-        <li>A crew of up to five people, all with unique skills or perks to give you advantages.</li>
-        <li>In depth combat with tons of different ways to play.</li>
-        <li>Live radar and cooldown display.</li>
-      </ul>
 
-      <h1>Desert Adventure/Lighting Tech Demo</h1>
+      <h3>Desert Adventure</h3>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/lJG8jfxrqws?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=lJG8jfxrqws&showinfo=0&modestbranding=1&autohide=1"></iframe>
       </div>
-      <h4>Game Features:</h4>
-      <ul>
-        <li>Uses an open source lighting engine to create nice looking gun shot effects.</li>
-        <li>A random level generator that creates complete and fully navigatable levels.</li>
-      </ul>
     </div>
   </div>
 
