2025 link/image update

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,13 @@
         <li><a href="https://linkedin.com/in/cody-clattenburg" style="padding: 5px;">
           <img alt="linkedin icon" src="images/linkedin-sign.png" height="40" class="img-circle"></img>
         </a></li>
-        <li><a href="https://twitter.com/Captainburg" style="padding: 5px;">
+        <li><a href="https://x.com/CodyClattenburg" style="padding: 5px;">
           <img alt="twitter icon" src="images/twitter-sign.png" height="40" class="img-circle"></img>
         </a></li>
         <li><a href="https://github.com/Captainburg" style="padding: 5px;">
           <img alt="github icon" src="images/github-sign.png" height="40" class="img-circle"></img>
         </a></li>
-        <li><a href='m&#97;il&#116;o&#58;c&#46;c%&#54;C&#97;tten%&#54;&#50;urg&#37;40sh%61&#119;&#46;&#37;63&#37;&#54;1' style="padding: 5px;">
+        <li><a href='m&#97;il&#116;o&#58;c&#97;c&#108;&#97;t&#116;&#101;&#110;&#98;&#117;&#114;&#103;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;' style="padding: 5px;">
           <img alt="email icon" src="images/email-sign.png" height="40" class="img-circle"></img>
         </a></li>
       </ul>
