--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cody Clattenburg - Video Games, Passion, and Personality</title>
-  <meta name="description=" content="Cody Clattenburg is a BCIT student looking to get a job in the video game industry. He is currently looking for a co-op position over the four month semester to further his skills, and plans to go into a digital processing option at BCIT. His 5 year goal is to become a rendering engineer.">
-  <meta name="Description" content="Cody Clattenburg is a BCIT student looking to get a job in the video game industry. He is currently looking for a co-op position over the four month semester to further his skills, and plans to go into a digital processing option at BCIT. His 5 year goal is to become a rendering engineer.">
+  <title>Cody Clattenburg - Teamwork, Problem Solving, and Initiative</title>
+  <meta name="description=" content="Cody Clattenburg's Portfolio demonstrating previous accomplishments, game jam creations, and personal projects.">
+  <meta name="Description" content="Cody Clattenburg is an experienced Software Engineer looking for work in the video game industry. He is currently looking for a role as a Software Engineer II.">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="css/extraStyle.css" rel="stylesheet" media="screen">
   <link href="images/me.png?" rel="icon" sizes="64x64" type="favicon.png">
 </head>
-<body>
+<body style="background-image: url('images/bg.jpeg');">
   <!-- Navigation -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">ABOUT</a></li>
-        <li><a href="portfolio.html">PORTFOLIO</a></li>
+        <li class="active"><a href="/">About Me</a></li>
+        <li><a href="portfolio.html">Personal Projects</a></li>
         <li><a href="https://linkedin.com/in/cody-clattenburg" style="padding: 5px;">
           <img alt="linkedin icon" src="images/linkedin-sign.png" height="40" class="img-circle"></img>
         </a></li>
@@ -33,8 +33,7 @@
       </ul>
     </div>
   </nav>
-
-<div class="container">
+<div class="container mask">
   <div class="row">
     <!-- Self Photo -->
     <div class="col-sm-4 text-center">
@@ -47,39 +46,41 @@
         Who am I?
       </h2>
       <p>
-        My name is Cody Clattenburg, I am a BCIT Computer Systems Technology graduate.
-        As a gamer myself, I am very invested in my work and care a lot about
-        creating a high quality product that others can enjoy. Nothing is better
-        than months of blood, sweat, and tears finally paying off as you watch
-        someone play your game for the first time.
+        I'm a game developer with a strong focus on tools and systems that make development smoother and more efficient. I enjoy tackling issues that add up to meaningful improvements, and I've recently been working on build and testing infrastructure to support better workflows. I'm passionate about building things that help myself and others others do their best work.
       </p>
       <h2>
-        Personal Projects and Skills
+        Previous Work and Skills
       </h2>
-      <h4>Personal Projects</h4>
+      <h4>Languages and Programs Learned</h4>
       <ul>
-        <li><a href="https://opendatadev.net/search-type">(JavaScript) An API that allows developers to use Public City Data for their applications.</a></li>
+        <li>7 Years of industry experience with C, C# and C++.</li>
+        <li>5 Years of industry experience with ADO/Jira</li>
+        <li>3 Years of experience with Profilers such as Neighbourhood, PIX, Selenium, and Microprofile.</li>
+        <li>Source control with GitHub, and command line Git.</li>
+        <li>Database management with SQL.</li>
+        <li>Web development languages such as HTML5, XHTML, XML, CSS, Bootstrap, JQuery, JavaScript, and PHP.</li>
+      </ul>
+      <h4>Awards and Certificates</h4>
+      <ul>
+        <li>August 2018 - BCIT Computer Systems Technology Diploma (Honors)</li>
+        <li>August 2016 - Android Advanced Technical Support Certificate</li>
+        <li>June 2016 - Information Technology Award</li>
+        <li>May 2016 - GWG Game Jam 2016 Winner</li>
+      </ul>
+      <h4>Previous Work</h4>
+      <ul>
+        <li>(C++)Added Monitoring Tools & support for multiple Performance Profilers to Minecraft.</li>
+        <li>(C#)Updated Azure pipelines to parse a new filetype upload for third party creator packs.</li>
+        <li>(C++)Completely rewrote the Structure Block and added new animation support for creators.</li>
+        <li>Participated in Game Jams since middle school, through college, and continued while working in Software and Game Development.</li>
+        <li><a href="portfolio.html">(GML) A procedural top-down shooter with multiple weapons, levels, rolling.</a></li>
+        <li>(JavaScript) An API that allows developers to use Public City Data for their applications.</li>
         <li>(Android) An App that morphs one image into another, similar to a snapchat face filter.</li>
         <li>(C#) An Audio Editor similar to Audacity that features DFT, Filtering, and more.</li>
         <li><a href="https://github.com/Captainburg/Game-Engine">(C++) A game engine using DirectX9 and Win32 for development that renders a 3D world.</a></li>
         <li><a href="portfolio.html">(GML) A top-down shooter in a 12-hour game jam with a small team.</a></li>
-        <li>(C#) A Neural Net that can read human writing without using any libraries, in only 2 days.</li>
-        <li>(Unity) A Medical Application for tracking a woman’s progress in labour.</li>
-      </ul>
-      <h4>Awards and Certificates</h4>
-      <ul>
-        <li>Android Advanced Technical Support Certificate			             	      August 2016</li>
-        <li>Information Technology Award					                                    June 2016</li>
-        <li>GWG Game Jam 2016 Winner					                                         May 2016</li>
-      </ul>
-      <h4>Languages and Programs Learned</h4>
-      <ul>
-        <li>Game and program creation with GML, Java, C, and C++.</li>
-        <li>1-2 Years of experience with C++, C#, C.</li>
-        <li>2 Years of experience with Java.</li>
-        <li>1-2 Years of experience with Git.</li>
-        <li>Experience with DirectX9, and DirectX11.</li>
-        <li>Experience with SQL, and web development.</li>
+        <li>(C#) A Neural Net back in 2017 that can read human writing without using any libraries.</li>
+        <li>(Unity) Practicum: A Medical Application for tracking a woman’s progress in labour.</li>
       </ul>
     </div>
   </div>
