--- a/portfolio.html
+++ b/portfolio.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cody Clattenburg - Portfolio Page</title>
+  <title>Cody Clattenburg - Personal Projects</title>
   <meta name="description=" content="Cody Clattenburg's Portfolio demonstrating previous accomplishments, game jam creations, and personal projects.">
-  <meta name="Description" content="Cody Clattenburg's is a BCIT student looking to get a job in the video game industry. He is currently looking for a co-op position over the four month semester to further his skills, and plans to go into a digital processing option at BCIT. His 5 year goal is to become a rendering engineer.">
+  <meta name="Description" content="Cody Clattenburg is an experienced Software Engineer looking for work in the video game industry. He is currently looking for a role as a Software Engineer II.">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="css/extraStyle.css" rel="stylesheet" media="screen">
   <link href="images/me.png?" rel="icon" sizes="64x64" type="favicon.png">
 </head>
-<body>
+<body style="background-image: url('images/bg.jpeg');">
   <!-- Navigation -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li><a href="/">ABOUT</a></li>
-        <li class="active"><a href="portfolio.html">PORTFOLIO</a></li>
+        <li><a href="/">About Me</a></li>
+        <li class="active"><a href="portfolio.html">Personal Projects</a></li>
         <li><a href="https://linkedin.com/in/cody-clattenburg" style="padding: 5px;">
           <img alt="linkedin icon" src="images/linkedin-sign.png" height="40" class="img-circle"></img>
         </a></li>
@@ -34,7 +34,7 @@
     </div>
   </nav>
 
-<div class="container">
+<div class="container mask">
   <div class="row">
     <!-- Self Photo -->
     <div class="col-sm-4 text-center">
@@ -43,22 +43,27 @@
     </div>
     <!-- PORTFOLIO -->
     <div class="col-sm-8 text-left">
-      <h3>RPG Engine</h3>
+      <h3>2023 Twin Gun (Skybox Labs Game Jam)</h3>
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/c6Pd0XRIP9Q?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=c6Pd0XRIP9Q&showinfo=0&modestbranding=1&autohide=1"></iframe>
+      </div>
+
+      <h3>2017 RPG Engine</h3>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/zXpAt4SHko0?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=zXpAt4SHko0&showinfo=0&modestbranding=1&autohide=1"></iframe>
       </div>
 
-      <h3>Tactical Strike Worldwide Offensive (GWG Game Jam Winner)</h3>
+      <h3>2016 Tactical Strike Worldwide Offensive (GWG Game Jam Winner)</h3>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/ZNvA9dovttA?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=ZNvA9dovttA&showinfo=0&modestbranding=1&autohide=1"></iframe>
       </div>
 
-      <h3>Space Exploration Game</h3>
+      <h3>2015 Space Exploration Game</h3>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/GnPVzAq_WHI?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=GnPVzAq_WHI&showinfo=0&autohide=1"></iframe>
       </div>
 
-      <h3>Desert Adventure</h3>
+      <h3>2015 Desert Adventure</h3>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/lJG8jfxrqws?autoplay=1&loop=1&controls=0&iv_load_policy=3&playlist=lJG8jfxrqws&showinfo=0&modestbranding=1&autohide=1"></iframe>
       </div>
